--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                foto
+                <!-- Aqui vai a imagem nas CSS -->
             </div>
             <div id="formulario">
                 <p>Seja bem-vind(a). Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
